--- a/work.html
+++ b/work.html
@@ -60,6 +60,12 @@
             flex-wrap: nowrap;
             /* pointer-events: none; */
         }
+
+        .spacer {
+            width: 100px;
+            /* Adjust to control extra space */
+            flex-shrink: 0;
+        }
     </style>
 </head>
 
@@ -201,6 +207,7 @@
                     <span class="text-white text-3xl font-bold">Title Animations</span>
                 </div>
             </a>
+            <div class="spacer"></div>
         </div>
     </div>
 
@@ -430,7 +437,7 @@
         const tween = gsap.to(races, {
             x: getScrollAmount,
             duration: 3,
-            ease: "none"
+            ease: "power2.out"
         });
 
         ScrollTrigger.create({
@@ -439,6 +446,7 @@
             end: () => `+=${getScrollAmount() * -1}`,
             pin: true,
             animation: tween,
+
             scrub: 1,
             invalidateOnRefresh: true,
             markers: false,
@@ -449,7 +457,22 @@
             target: ".racesWrapper", // can be any element (selector text is fine)
             type: "pointer,touch",
         });
-        
+
+        gsap.utils.toArray(".group").forEach(box => {
+            gsap.from(box, {
+                opacity: 0,
+                scale: 0.5,
+                duration: 1,
+                ease: "power2.out",
+                scrollTrigger: {
+                    trigger: box,
+                    start: "top 80%", // Adjust this to control when the animation begins
+                    end: "top 50%",
+                    toggleActions: "play none none none" // Runs animation only once when the element enters
+                }
+            });
+        });
+
         function getClosestToLeft() {
             const links = document.querySelectorAll("#scrollable-div a");
             let closestElement = null;
