contact loader text color fix

--- a/contactus.html
+++ b/contactus.html
@@ -50,7 +50,10 @@
             margin-top: 1rem;
         }
 
-
+        .loader-text {
+            color: #ea4294;
+            font-family: 'Lato', sans-serif;
+        }
 
 
         /* Small screens (max-width: 768px) */
@@ -69,8 +72,8 @@
                 width: 4rem;
                 /* Added missing semicolon */
             }
- 
- 
+
+
 
         }
 
