--- a/work.html
+++ b/work.html
@@ -62,9 +62,17 @@
         }
 
         .spacer {
-            width: 100px;
+            width: 100vh;
             /* Adjust to control extra space */
             flex-shrink: 0;
+        }
+
+        @media (max-width: 767px) {
+            .spacer {
+                width: 30vh;
+            }
+
+
         }
     </style>
 </head>
@@ -157,55 +165,62 @@
     <!-- Section work gallery -->
     <div class="racesWrapper overflow-x-auto whitespace-nowrap scrollbar-hide no-scrollbar">
         <div class="races" id="scrollable-div">
-            <a class="p-2 relative w-full sm:w-[50vw] h-screen flex-shrink-0 inline-block group"
+            <!-- <a class="p-2 relative w-full sm:w-[50vw] h-screen flex-shrink-0 inline-block group"
                 href="/advertising.html">
                 <img src="/our_works/Advertising.webp" class="w-full h-full object-cover " />
                 <div
                     class="absolute inset-0 bg-green-500 bg-opacity-1 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity">
                     <span class="text-white text-3xl font-bold lat">Advertising</span>
                 </div>
+            </a> -->
+            <a class="p-2 relative w-half h-screen flex-shrink-0 inline-block group" href="/advertising.html">
+                <img src="/our_works/Advertising.webp" class="w-full h-full object-cover" />
+                <span
+                    class="absolute inset-x-0 top-1/2 transform -translate-y-1/2 text-white text-7xl font-thin uppercase text-center">
+                    Advertising
+                </span>
             </a>
-            <a class="p-2 relative w-full sm:w-[50vw] h-screen flex-shrink-0 inline-block group no-pointer-events"
+            <a class="p-2 relative w-half h-screen flex-shrink-0 inline-block group no-pointer-events"
                 href="/branding.html">
                 <img src="/our_works/Branding.webp" class="w-full h-full object-cover filter blur-sm" />
-                <div
-                    class="absolute inset-0 bg-green-500 bg-opacity-1 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity hidden">
-                    <span class="text-white text-3xl font-bold">Branding</span>
-                </div>
+                <span
+                    class="absolute inset-x-0 top-1/2 transform -translate-y-1/2 text-white text-7xl font-thin uppercase text-center hidden">
+                    Branding
+                </span>
             </a>
-            <a class="p-2 relative w-full sm:w-[50vw] h-screen flex-shrink-0 inline-block group no-pointer-events"
+            <a class="p-2 relative w-half h-screen flex-shrink-0 inline-block group no-pointer-events"
                 href="/events.html">
                 <img src="/our_works/Events.webp" class="w-full h-full object-cover filter blur-sm" />
-                <div
-                    class="absolute inset-0 bg-green-500 bg-opacity-1 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity">
-                    <span class="text-white text-3xl font-bold">Events</span>
-                </div>
+                <span
+                    class="absolute inset-x-0 top-1/2 transform -translate-y-1/2 text-white text-7xl font-thin uppercase text-center hidden">
+                    Events
+                </span>
             </a>
 
-            <a class="p-2 relative w-full sm:w-[50vw] h-screen flex-shrink-0 inline-block group no-pointer-events"
+            <a class="p-2 relative w-half h-screen flex-shrink-0 inline-block group no-pointer-events"
                 href="/movie-poster.html">
                 <img src="/our_works/MoviePosters.webp" class="w-full h-full object-cover filter blur-sm" />
-                <div
-                    class="absolute inset-0 bg-green-500 bg-opacity-1 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity">
-                    <span class="text-white text-3xl font-bold">Movie Posters</span>
-                </div>
+                <span
+                    class="absolute inset-x-0 top-1/2 transform -translate-y-1/2 text-white text-7xl font-thin uppercase text-center hidden">
+                    Movie Posters
+                </span>
             </a>
-            <a class="p-2 relative w-full sm:w-[50vw]  h-screen flex-shrink-0 inline-block group no-pointer-events"
+            <a class="p-2 relative w-half  h-screen flex-shrink-0 inline-block group no-pointer-events"
                 href="/products.html">
                 <img src="/our_works/Products.webp" class="w-full h-full object-cover filter blur-sm" />
-                <div
-                    class="absolute inset-0 bg-green-500 bg-opacity-1 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity">
-                    <span class="text-white text-3xl font-bold">Products</span>
-                </div>
+                <span
+                    class="absolute inset-x-0 top-1/2 transform -translate-y-1/2 text-white text-7xl font-thin uppercase text-center hidden">
+                    Products
+                </span>
             </a>
 
-            <a class="p-2 relative w-full sm:w-[50vw] h-screen flex-shrink-0 inline-block group no-pointer-events"
+            <a class="p-2 relative w-half h-screen flex-shrink-0 inline-block group no-pointer-events"
                 href="/title-animations.html">
                 <img src="/our_works/TItleAnimations.webp" class="w-full h-full object-cover filter blur-sm" />
-                <div
-                    class="absolute inset-0 bg-green-500 bg-opacity-1 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity">
-                    <span class="text-white text-3xl font-bold">Title Animations</span>
-                </div>
+                <span
+                    class="absolute inset-x-0 top-1/2 transform -translate-y-1/2 text-white text-7xl font-thin uppercase text-center hidden">
+                    Title <br /> Animations
+                </span>
             </a>
             <div class="spacer"></div>
         </div>
@@ -480,12 +495,18 @@
 
             links.forEach(link => {
                 const rect = link.getBoundingClientRect();
-
                 // Only consider elements that are still within the viewport (not crossed the left)
-                if (rect.left >= 0 && rect.left < closestDistance) {
+                // if (rect.left >= 0 && rect.left < closestDistance) {
+                //     closestDistance = rect.left;
+                //     closestElement = link;
+                // }  
+
+                if (rect.left <= 200) {
                     closestDistance = rect.left;
                     closestElement = link;
                 }
+
+
             });
 
             return closestElement;
@@ -497,7 +518,7 @@
 
             links.forEach(link => {
                 const img = link.querySelector("img");
-                const overlayDiv = link.querySelector("div");
+                const overlayDiv = link.querySelector("span");// overlay to span
 
                 if (link === closest) {
                     img.classList.remove("blur-sm"); // Remove class from closest image
