new design for serrvice page

--- a/service.html
+++ b/service.html
@@ -164,9 +164,12 @@
 				<p class="text-xs sm:text-sm md:text-base leading-loose animate-text">
 					LOGO DESIGN, BRAND POSITIONING, BRAND STRATEGY, NAMING & TAGLINE DEVELOPMENT, REBRANDING
 				</p>
-				<button class="mt-4" onclick="openServiceModal('branding-popup')">
-					<img src="/services-assets/explore-button-white.png" alt="Explore"
-						class="w-16 sm:w-20 md:w-24 animate-text">
+				<button
+					class="outline-none focus:outline-none focus:ring-0 animate-text mt-4 px-4 py-1 border border-white text-white uppercase bg-transparent tracking-[0.3em] text-sm"
+					onclick="openServiceModal('branding-popup')">
+					<!-- <img src="/services-assets/explore-button-white.png" alt="Explore"
+						class="w-16 sm:w-20 md:w-24 animate-text"> -->
+					Explore
 				</button>
 			</div>
 		</div>
@@ -189,9 +192,12 @@
 				<p class="text-right text-xs sm:text-sm md:text-base leading-loose animate-text">
 					PRINT, DIGITAL, FILM, PHOTOGRAPHY AND ART DIRECTION, OUT-OF-HOME ADVERTISING.
 				</p>
-				<button class="mt-4 " onclick="openServiceModal('ads-popup')">
-					<img src="/services-assets/explore-button-blue.png" alt="Explore"
-						class="w-16 sm:w-20 md:w-24 animate-text">
+				<button
+					class="outline-none focus:outline-none focus:ring-0 animate-text mt-4 px-4 py-1 border border-blue-700 text-blue uppercase bg-transparent tracking-[0.3em] text-sm"
+					onclick="openServiceModal('ads-popup')">
+					<!-- <img src="/services-assets/explore-button-blue.png" alt="Explore"
+						class="w-16 sm:w-20 md:w-24 animate-text"> -->
+					Explore
 				</button>
 			</div>
 		</div>
@@ -202,13 +208,15 @@
 			<div class="text-left custom-width">
 				<h1 class="text-3xl md:text-4xl font-bold leading-relaxed pb-2 animate-text">DESIGNING</h1>
 				<p class="text-xs sm:text-sm md:text-base leading-loose animate-text">
-					GRAPHIC DESIGN, PACKAGING DESIGN, WEBSITE DESIGN & DEVELOPMENT, UI/UX DESIGN, PROTOTYPING AND
-					WIREFRAMING,
+					GRAPHIC DESIGN, PACKAGING DESIGN, WEBSITE DESIGN & DEVELOPMENT,
 					MOTION GRAPHICS & ANIMATION
 				</p>
-				<button class="mt-4" onclick="openServiceModal('designer-popup')">
-					<img src="/services-assets/explore-button-white.png" alt="Explore"
-						class="w-16 sm:w-20 md:w-24 animate-text">
+				<button
+					class="outline-none focus:outline-none focus:ring-0 animate-text mt-4 px-4 py-1 border border-white text-white uppercase bg-transparent tracking-[0.3em] text-sm"
+					onclick="openServiceModal('designer-popup')">
+					<!-- <img src="/services-assets/explore-button-white.png" alt="Explore"
+						class="w-16 sm:w-20 md:w-24 animate-text"> -->
+					Explore
 				</button>
 			</div>
 		</div>
@@ -231,9 +239,12 @@
 				<p class="text-xs sm:text-sm md:text-base leading-loose animate-text">
 					TITLE ANIMATION, STOP MOTION ANIMATION, MOVIE TITLE SEQUENCE, 2D ANIMATION & 3D ANIMATION
 				</p>
-				<button class="mt-4" onclick="openServiceModal('film-production-popup')">
-					<img src="/services-assets/explore-button-white.png" alt="Explore"
-						class="w-16 sm:w-20 md:w-24 animate-text">
+				<button
+					class="outline-none focus:outline-none focus:ring-0 animate-text mt-4 px-4 py-1 border border-white text-white uppercase bg-transparent tracking-[0.3em] text-sm"
+					onclick="openServiceModal('film-production-popup')">
+					<!-- <img src="/services-assets/explore-button-white.png" alt="Explore"
+						class="w-16 sm:w-20 md:w-24 animate-text"> -->
+					Explore
 				</button>
 			</div>
 		</div>
@@ -244,12 +255,14 @@
 			<div class="text-left custom-width">
 				<h1 class="text-3xl md:text-4xl font-bold leading-relaxed pb-2 animate-text">UI / UX</h1>
 				<p class="text-xs sm:text-sm md:text-base leading-loose animate-text">
-					SOCIAL MEDIA STRATEGY AND MANAGEMENT, CONTENT CREATION - COPY, GRAPHICS AND VIDEO, INFLUENCER
-					MARKETING
+					UI DESIGN, INTERACTION DESIGN, PROTOTYPING AND WIREFRAMING, UX DESIGN
 				</p>
-				<button class="mt-4" onclick="openServiceModal('ui-ux-popup')">
-					<img src="/services-assets/explore-button-white.png" alt="Explore"
-						class="w-16 sm:w-20 md:w-24 animate-text">
+				<button
+					class="outline-none focus:outline-none focus:ring-0 animate-text mt-4 px-4 py-1 border border-white text-white uppercase bg-transparent tracking-[0.3em] text-sm"
+					onclick="openServiceModal('ui-ux-popup')">
+					<!-- <img src="/services-assets/explore-button-white.png" alt="Explore"
+						class="w-16 sm:w-20 md:w-24 animate-text"> -->
+					Explore
 				</button>
 			</div>
 		</div>
@@ -273,11 +286,39 @@
 					360 MARKETING CAMPAIGNS, GUERRILLA MARKETING AND EXPERIENTIAL MARKETING, SPONSORSHIP AND
 					PARTNERSHIPS
 				</p>
-				<button class="mt-4" onclick="openServiceModal('integrated-popup')">
-					<img src="/services-assets/explore-button-blue.png" alt="Explore"
-						class="w-16 sm:w-20 md:w-24 animate-text">
+				<button
+					class="outline-none focus:outline-none focus:ring-0 animate-text mt-4 px-4 py-1 border border-blue-700 text-blue uppercase bg-transparent tracking-[0.3em] text-sm"
+					onclick="openServiceModal('integrated-popup')">
+					<!-- <img src="/services-assets/explore-button-blue.png" alt="Explore"
+						class="w-16 sm:w-20 md:w-24 animate-text"> -->
+					Explore
 				</button>
 			</div>
+		</div>
+
+
+		<!-- Content 13 -->
+		<div
+			class="col-span-4 row-span-2 row-start-13 bg-pink-500 p-4 md:p-6 lg:p-8 text-white flex items-center justify-center">
+			<div class="text-left custom-width">
+				<h1 class="text-3xl md:text-4xl font-bold leading-relaxed pb-2 animate-text uppercase">Digital
+					<br />Marketing
+				</h1>
+				<p class="text-xs sm:text-sm md:text-base leading-loose animate-text">
+					SOCIAL MEDIA STRATEGY AND MANAGEMENT, CONTENT CREATION - COPY, GRAPHICS AND VIDEO, INFLUENCER
+					MARKETING
+				</p>
+				<button
+					class="outline-none focus:outline-none focus:ring-0 animate-text mt-4 px-4 py-1 border border-white text-white uppercase bg-transparent tracking-[0.3em] text-sm"
+					onclick="openServiceModal('digital-marketing-popup')">
+					Explore
+				</button>
+			</div>
+		</div>
+
+		<!-- Image 12 -->
+		<div class="posters col-span-3 row-span-2 col-start-5 row-start-13 bg-pink-500 max-h-[356px]">
+			<img src="/services-assets/design_asset.jpg" class="w-full h-full object-cover">
 		</div>
 	</section>
 
@@ -970,12 +1011,119 @@
 	</div>
 	<!-- Film Production Modal end -->
 
-
 	<!-- UI / UX Modal -->
 	<div id="ui-ux-popup" class="hidden fixed inset-0 bg-black bg-opacity-65 overflow-y-auto px-4 pt-20 pb-16">
 		<div class="flex items-center justify-center min-h-full">
 			<div class="relative bg-white  max-w-4xl mx-auto p-5">
 				<button onclick="closeServiceModal('ui-ux-popup')"
+					class="sm:flex absolute right-5 top-5 md:top-10 md:right-10 w-10 h-10 flex items-center justify-center text-white bg-gray-800 hover:bg-gray-700 rounded-full text-xl z-50">
+					<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"
+						class="w-6 h-6">
+						<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+							d="M6 18L18 6M6 6l12 12" />
+					</svg>
+				</button>
+				<div class="flex flex-col md:flex-row w-full mt-10">
+					<div class="md:w-[30%] w-full flex items-center justify-start md:justify-center p-4">
+						<img src="/services-assets/pop-assets/mobile-app.png" alt="service asset"
+							class="w-24 h-24 object-contain" />
+					</div>
+
+					<div class="md:w-[70%] w-full p-4 flex flex-col justify-center pr-0 md:pr-20">
+						<h2 class="uppercase text-4xl text-[#272cf7] mb-5">UI Design</h2>
+						<p class="text-sm text-gray-700">
+							Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
+							been
+							the industry's standard dummy text ever since the 1500s, when an unknown printer took a
+							galley
+						</p>
+					</div>
+				</div>
+				<div class="flex flex-col md:flex-row w-full mt-10">
+					<div class="md:w-[30%] w-full flex items-center justify-start md:justify-center p-4">
+						<img src="/services-assets/pop-assets/touch.png" alt="service asset"
+							class="w-24 h-24 object-contain" />
+					</div>
+
+					<div class="md:w-[70%] w-full p-4 flex flex-col justify-center pr-0 md:pr-20">
+						<h2 class="uppercase text-4xl text-[#272cf7] mb-5">interaction design</h2>
+						<p class="text-sm text-gray-700">
+							Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
+							been
+							the industry's standard dummy text ever since the 1500s, when an unknown printer took a
+							galley
+							of type and scrambled it to make a type specimen book. It has survived not only five
+							centuries,
+							but also the leap into electronic typesetting, remaining essentially unchanged. It was
+							popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum
+							passages,
+							and more recently with desktop publishing software like Aldus PageMaker including versions
+							of
+							Lorem Ipsum.
+						</p>
+					</div>
+				</div>
+
+				<div class="flex flex-col md:flex-row w-full mt-10">
+					<div class="md:w-[30%] w-full flex items-center justify-start md:justify-center p-4">
+						<img src="/services-assets/pop-assets/wireframe.png" alt="service asset"
+							class="w-24 h-24 object-contain" />
+					</div>
+
+					<div class="md:w-[70%] w-full p-4 flex flex-col justify-center pr-0 md:pr-20">
+						<h2 class="uppercase text-4xl text-[#272cf7] mb-5">prototyping & wireframing</h2>
+						<p class="text-sm text-gray-700">
+							Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
+							been
+							the industry's standard dummy text ever since the 1500s, when an unknown printer took a
+							galley
+							of type and scrambled it to make a type specimen book. It has survived not only five
+							centuries,
+							but also the leap into electronic typesetting, remaining essentially unchanged. It was
+							popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum
+							passages,
+							and more recently with desktop publishing software like Aldus PageMaker including versions
+							of
+							Lorem Ipsum.
+						</p>
+					</div>
+				</div>
+
+				<div class="flex flex-col md:flex-row w-full mt-10 mb-10">
+					<div class="md:w-[30%] w-full flex items-center justify-start md:justify-center p-4">
+						<img src="/services-assets/pop-assets/rgb.png" alt="service asset"
+							class="w-24 h-24 object-contain" />
+					</div>
+
+					<div class="md:w-[70%] w-full p-4 flex flex-col justify-center pr-0 md:pr-20">
+						<h2 class="uppercase text-4xl text-[#272cf7] mb-5">ux design</h2>
+						<p class="text-sm text-gray-700">
+							Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
+							been
+							the industry's standard dummy text ever since the 1500s, when an unknown printer took a
+							galley
+							of type and scrambled it to make a type specimen book. It has survived not only five
+							centuries,
+							but also the leap into electronic typesetting, remaining essentially unchanged. It was
+							popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum
+							passages,
+							and more recently with desktop publishing software like Aldus PageMaker including versions
+							of
+							Lorem Ipsum.
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- UI / UX Modal end -->
+
+	<!-- Digital-marketing popup -->
+	<div id="digital-marketing-popup"
+		class="hidden fixed inset-0 bg-black bg-opacity-65 overflow-y-auto px-4 pt-20 pb-16">
+		<div class="flex items-center justify-center min-h-full">
+			<div class="relative bg-white  max-w-4xl mx-auto p-5">
+				<button onclick="closeServiceModal('digital-marketing-popup')"
 					class="sm:flex absolute right-5 top-5 md:top-10 md:right-10 w-10 h-10 flex items-center justify-center text-white bg-gray-800 hover:bg-gray-700 rounded-full text-xl z-50">
 					<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"
 						class="w-6 h-6">
@@ -1076,7 +1224,7 @@
 			</div>
 		</div>
 	</div>
-	<!-- UI / UX Modal end -->
+	<!-- Digital-marketing Modal end -->
 	<!-- INTEGRATED MARKETING  Modal -->
 	<div id="integrated-popup" class="hidden fixed inset-0 bg-black bg-opacity-65 overflow-y-auto px-4 pt-20 pb-16">
 		<div class="flex items-center justify-center min-h-full">
@@ -1505,18 +1653,47 @@
 		}
 
 		// Add event listeners to close modals when clicking outside the content box
-		document.addEventListener('DOMContentLoaded', function() {
+		// document.addEventListener('DOMContentLoaded', function () {
+		// 	// Get all service modals
+		// 	const serviceModals = document.querySelectorAll('[id$="-popup"]');
+
+		// 	// Add click event listener to each modal
+		// 	serviceModals.forEach(modal => {
+		// 		modal.addEventListener('click', function (e) {
+		// 			// Get the modal content box (the white background div)
+		// 			const contentBox = modal.querySelector('.relative.bg-white');
+
+		// 			// Check if the click was outside the content box
+		// 			// If the clicked element is not inside the content box, close the modal
+		// 			if (!contentBox.contains(e.target) && e.target !== contentBox) {
+		// 				closeServiceModal(modal.id);
+		// 			}
+		// 		});
+		// 	});
+		// });
+
+		document.addEventListener('DOMContentLoaded', function () {
 			// Get all service modals
 			const serviceModals = document.querySelectorAll('[id$="-popup"]');
-			
+
+			// Function to close modal on ESC key press
+			document.addEventListener('keydown', function (e) {
+				if (e.key === 'Escape') { // Check if ESC key was pressed
+					serviceModals.forEach(modal => {
+						const contentBox = modal.querySelector('.relative.bg-white');
+
+						if (!contentBox.contains(e.target) && e.target !== contentBox) {
+							closeServiceModal(modal.id);
+						}
+					});
+				}
+			});
+
 			// Add click event listener to each modal
 			serviceModals.forEach(modal => {
-				modal.addEventListener('click', function(e) {
-					// Get the modal content box (the white background div)
+				modal.addEventListener('click', function (e) {
 					const contentBox = modal.querySelector('.relative.bg-white');
-					
-					// Check if the click was outside the content box
-					// If the clicked element is not inside the content box, close the modal
+
 					if (!contentBox.contains(e.target) && e.target !== contentBox) {
 						closeServiceModal(modal.id);
 					}
